--- a/src/views/Events/components/EventItem/EventItem.module.css
+++ b/src/views/Events/components/EventItem/EventItem.module.css
@@ -1,17 +1,8 @@
 .calendar {
     display: flex;
+    align-items: center;
 }
 
 .avatar {
-    position: relative;
     margin-right: 12px;
-    place-self: flex-start;
-}
-
-.placeholder {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 1;
 }
