--- a/src/modals/AddFriendsModal/AddFriendsModal.module.css
+++ b/src/modals/AddFriendsModal/AddFriendsModal.module.css
@@ -18,7 +18,7 @@
     z-index: 1;
     background: white;
     border-radius: 50%;
-    border: 2px solid white;
+    border: 2px solid var(--background_content);
     color: var(--icon_secondary);
 }
 
