[W-29] Добавил возможность включать/выключать уведомления, отправляем уведомление после отправки денег

--- a/src/views/Event/Event.module.css
+++ b/src/views/Event/Event.module.css
@@ -14,3 +14,15 @@
 .cell {
     margin-left: -10px;
 }
+
+.menu {
+    display: flex;
+}
+
+.menuItem {
+    color: var(--header_tint);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
