--- a/src/modals/AddFriendsModal/AddFriendsModal.module.css
+++ b/src/modals/AddFriendsModal/AddFriendsModal.module.css
@@ -16,7 +16,7 @@
     top: -3px;
     right: -3px;
     z-index: 1;
-    background: white;
+    background: var(--white);
     border-radius: 50%;
     border: 2px solid var(--background_content);
     color: var(--icon_secondary);
