[W-88] Откатил изменения со свайпом назад

--- a/src/modals/UsersModal/UsersModal.module.css
+++ b/src/modals/UsersModal/UsersModal.module.css
@@ -6,7 +6,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background: var(--dynamic_blue);
+    background: var(--header_tint);
 }
 
 .icon {
